--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -1,6 +1,6 @@
 {
   "welcome": {
-    "title": "जनोरी में आपका स्वागत है",
+    "title": "जानोरी में आपका स्वागत है",
     "subtitle": "सतत विकास और समृद्धि के प्रति प्रतिबद्ध एक आदर्श गाँव"
   },
   "nav": {
@@ -9,11 +9,14 @@
     "services": "सेवाएं",
     "events": "कार्यक्रम",
     "gallery": "गैलरी",
-    "contact": "संपर्क"
+    "contact": "संपर्क",
+    "logout": "लॉगआउट",
+    "adminLogin": "प्रशासन लॉगिन",
+    "brandTitle": "अपली जानोरी"
   },
   "home": {
     "slide1": {
-      "title": "जनोरी में आपका स्वागत है",
+      "title": "जानोरी में आपका स्वागत है",
       "subtitle": "सतत विकास और समृद्धि के प्रति प्रतिबद्ध एक आदर्श गाँव",
       "image": "https://media.istockphoto.com/id/503160722/photo/farmer-spreads-fertilizers-in-the-field-wheat.jpg?s=612x612&w=0&k=20&c=H616JmwTXkV8LVsiriMyqx2M9W_LUHbMwKiHEsehz-E="
     },
@@ -30,8 +33,8 @@
     "welcomeTitle": "Welcome to ",
     "villageName": "Janori",
     "gramPanchayat": " Gram Panchayat",
-    "welcomeParagraph1": "जनोरी महाराष्ट्र के ग्रामीण क्षेत्र में स्थित एक जीवंत गाँव है, जहाँ परंपरा प्रगति से मिलती है। हमारी ग्राम पंचायत अपने गाँव के सतत विकास और निवासियों के कल्याण के लिए प्रतिबद्ध है।",
-    "welcomeParagraph2": "हमारे सरपंच और समर्पित पंचायत सदस्यों के दूरदर्शी नेतृत्व में, हम जनोरी को आधुनिक सुविधाओं के साथ एक आदर्श गाँव में बदलने के लिए अथक प्रयास कर रहे हैं, जबकि हमारी समृद्ध सांस्कृतिक विरासत को संरक्षित कर रहे हैं।",
+    "welcomeParagraph1": "जानोरी महाराष्ट्र के ग्रामीण क्षेत्र में स्थित एक जीवंत गाँव है, जहाँ परंपरा प्रगति से मिलती है। हमारी ग्राम पंचायत अपने गाँव के सतत विकास और निवासियों के कल्याण के लिए प्रतिबद्ध है।",
+    "welcomeParagraph2": "हमारे सरपंच और समर्पित पंचायत सदस्यों के दूरदर्शी नेतृत्व में, हम जानोरी को आधुनिक सुविधाओं के साथ एक आदर्श गाँव में बदलने के लिए अथक प्रयास कर रहे हैं, जबकि हमारी समृद्ध सांस्कृतिक विरासत को संरक्षित कर रहे हैं।",
     "learnMore": "हमारे बारे में और जानें",
     "membersTitle": "आमची ग्रामपंचायत सदस्य",
     "membersSubtitle": "गावाच्या विकासासाठी समर्पित नेतृत्व",
@@ -244,7 +247,7 @@
   },
   "events": {
     "title": "गाँव के कार्यक्रम",
-    "subtitle": "जनोरी में होने वाली सभी गतिविधियों से अपडेट रहें",
+    "subtitle": "जानोरी में होने वाली सभी गतिविधियों से अपडेट रहें",
     "upcomingEventsTitle": "आगामी कार्यक्रम",
     "upcomingEventsSubtitle": "हमारे सामुदायिक आयोजनों और गतिविधियों का हिस्सा बनें",
     "search": "कार्यक्रम खोजें...",
@@ -342,7 +345,7 @@
   },
   "gallery": {
     "title": "हमारी गैलरी",
-    "subtitle": "जनोरी के सार और भावना को कैप्चर करना",
+    "subtitle": "जानोरी के सार और भावना को कैप्चर करना",
     "photoGalleryTitle": "फोटो गैलरी",
     "photoGallerySubtitle": "हमारे गाँव के जीवन और गतिविधियों की एक दृश्य यात्रा",
     "videoGalleryTitle": "वीडियो गैलरी",
@@ -372,10 +375,10 @@
   },
   "contact": {
     "title": "संपर्क करें",
-    "subtitle": "जनोरी ग्राम पंचायत से संपर्क करें",
+    "subtitle": "जानोरी ग्राम पंचायत से संपर्क करें",
     "getInTouch": {
       "title": "संपर्क में रहें",
-      "description": "हम आपकी किसी भी पूछताछ या चिंताओं में सहायता के लिए यहाँ हैं। निम्नलिखित किसी भी माध्यम से हमसे संपर्क करें:"
+      "description": "हम आपकी किसी भी पूछताछ या चिंता में सहायता के लिए यहाँ हैं। निम्नलिखित किसी भी माध्यम से हमसे संपर्क करें:"
     },
     "form": {
       "title": "हमें संदेश भेजें",
@@ -389,8 +392,8 @@
     },
     "address": {
       "title": "हमारा पता",
-      "line1": "ग्राम पंचायत कार्यालय, जनोरी",
-      "line2": "जिला: पुणे, महाराष्ट्र - 412108"
+      "line1": "अट पोस्ट जनोरी, ता. शेगांव, जि. बुलढाणा",
+      "line2": "पिन कोड: 444203"
     },
     "phone": {
       "title": "फोन नंबर",
@@ -414,10 +417,10 @@
     },
     "map": {
       "title": "हमें खोजें",
-      "subtitle": "जनोरी गाँव में हमारे कार्यालय पर आएं",
+      "subtitle": "जानोरी गाँव में हमारे कार्यालय पर आएं",
       "directionsTitle": "हम तक कैसे पहुँचें",
       "byBus": "बस द्वारा",
-      "byBusDesc": "जनोरी बस स्टॉप तक राज्य परिवहन बस लें। पंचायत कार्यालय बस स्टॉप से 500 मीटर की दूरी पर है।",
+      "byBusDesc": "जानोरी बस स्टॉप तक राज्य परिवहन बस लें। पंचायत कार्यालय बस स्टॉप से 500 मीटर की दूरी पर है।",
       "byCar": "कार द्वारा",
       "byCarDesc": "पुणे-सोलापुर हाईवे से जनोरी जंक्शन पर मुड़ें। गाँव के केंद्र तक पहुँचने के लिए साइनबोर्ड का अनुसरण करें।",
       "byTrain": "ट्रेन द्वारा",
