--- a/src/i18n/locales/mr.json
+++ b/src/i18n/locales/mr.json
@@ -1,6 +1,6 @@
 {
   "welcome": {
-    "title": "जनोरीमध्ये आपले स्वागत आहे",
+    "title": "जानोरीमध्ये आपले स्वागत आहे",
     "subtitle": "शाश्वत विकास आणि समृद्धीसाठी वचनबद्ध एक आदर्श गाव"
   },
   "nav": {
@@ -9,11 +9,14 @@
     "services": "सेवा",
     "events": "कार्यक्रम",
     "gallery": "गॅलरी",
-    "contact": "संपर्क"
+    "contact": "संपर्क",
+    "logout": "लॉगआउट",
+    "adminLogin": "प्रशासन लॉगिन",
+    "brandTitle": "अपली जानोरी"
   },
   "home": {
     "slide1": {
-      "title": "जनोरीमध्ये आपले स्वागत आहे",
+      "title": "जानोरीमध्ये आपले स्वागत आहे",
       "subtitle": "शाश्वत विकास आणि समृद्धीसाठी वचनबद्ध एक आदर्श गाव"
     },
     "slide2": {
@@ -27,8 +30,8 @@
     "welcomeTitle": "Welcome to ",
     "villageName": "Janori",
     "gramPanchayat": " Gram Panchayat",
-    "welcomeParagraph1": "जनोरी हे महाराष्ट्राच्या ग्रामीण भागात वसलेले एक जिवंत गाव आहे, जिथे परंपरा प्रगतीशी मिळते. आमची ग्रामपंचायत गावाच्या शाश्वत विकासासाठी आणि रहिवाशांच्या कल्याणासाठी वचनबद्ध आहे.",
-    "welcomeParagraph2": "आमच्या सरपंच आणि समर्पित पंचायत सदस्यांच्या दूरदर्शी नेतृत्वाखाली, आम्ही जनोरीला आधुनिक सुविधांसह एक आदर्श गाव बनवण्यासाठी अथक प्रयत्न करत आहोत, तसेच आमचा समृद्ध सांस्कृतिक वारसा जपत आहोत.",
+    "welcomeParagraph1": "जानोरी हे महाराष्ट्राच्या ग्रामीण भागात वसलेले एक जिवंत गाव आहे, जिथे परंपरा प्रगतीशी मिळते. आमची ग्रामपंचायत गावाच्या शाश्वत विकासासाठी आणि रहिवाशांच्या कल्याणासाठी वचनबद्ध आहे.",
+    "welcomeParagraph2": "आमच्या सरपंच आणि समर्पित पंचायत सदस्यांच्या दूरदर्शी नेतृत्वाखाली, आम्ही जानोरीला आधुनिक सुविधांसह एक आदर्श गाव बनवण्यासाठी अथक प्रयत्न करत आहोत, तसेच आमचा समृद्ध सांस्कृतिक वारसा जपत आहोत.",
     "learnMore": "आमच्याबद्दल अधिक जाणून घ्या",
     "readMore": "अधिक वाचा",
     "membersTitle": "आमची ग्रामपंचायत सदस्य",
@@ -241,7 +244,7 @@
   },
   "events": {
     "title": "गावातील कार्यक्रम",
-    "subtitle": "जनोरीमधील सर्व घडामोडींबद्दल अद्ययावत रहा",
+    "subtitle": "जानोरीमधील सर्व घडामोडींबद्दल अद्ययावत रहा",
     "upcomingEventsTitle": "येणारे कार्यक्रम",
     "upcomingEventsSubtitle": "आमच्या समुदायाच्या कार्यक्रमांचा आणि उपक्रमांचा भाग व्हा",
     "search": "कार्यक्रम शोधा...",
@@ -339,7 +342,7 @@
   },
   "gallery": {
     "title": "आमची गॅलरी",
-    "subtitle": "जनोरीचे सार आणि भावना टिपणे",
+    "subtitle": "जानोरीचे सार आणि भावना टिपणे",
     "photoGalleryTitle": "छायाचित्र गॅलरी",
     "photoGallerySubtitle": "आमच्या गावातील जीवन आणि उपक्रमांची दृश्य सफर",
     "videoGalleryTitle": "व्हिडिओ गॅलरी",
@@ -364,12 +367,12 @@
       "3": { "title": "ग्रामसभा बैठक ठळक मुद्दे" }
     },
     "ctaTitle": "तुमचे गाव क्षण शेअर करा",
-    "ctaDescription": "तुमच्याकडे जनोरी गावातील कार्यक्रम किंवा सुंदर ठिकाणांचे फोटो किंवा व्हिडिओ आहेत? आमच्या गॅलरीमध्ये प्रदर्शित करण्यासाठी ते आमच्यासोबत शेअर करा",
+    "ctaDescription": "तुमच्याकडे जानोरी गावातील कार्यक्रम किंवा सुंदर ठिकाणांचे फोटो किंवा व्हिडिओ आहेत? आमच्या गॅलरीमध्ये प्रदर्शित करण्यासाठी ते आमच्यासोबत शेअर करा",
     "submitMedia": "माध्यमे सबमिट करा"
   },
   "contact": {
     "title": "संपर्क",
-    "subtitle": "जनोरी ग्रामपंचायतीशी संपर्क साधा",
+    "subtitle": "जानोरी ग्रामपंचायतीशी संपर्क साधा",
     "getInTouch": {
       "title": "संपर्कात रहा",
       "description": "आम्ही तुमच्या कोणत्याही चौकशी किंवा समस्यांमध्ये मदत करण्यासाठी येथे आहोत. खालीलपैकी कोणत्याही माध्यमातून आमच्याशी संपर्क साधा:"
@@ -386,7 +389,7 @@
     },
     "address": {
       "title": "आमचा पत्ता",
-      "line1": "ग्रामपंचायत कार्यालय, जनोरी",
+      "line1": "ग्रामपंचायत कार्यालय, जानोरी",
       "line2": "जिल्हा: पुणे, महाराष्ट्र - ४१२१०८"
     },
     "phone": {
@@ -411,14 +414,14 @@
     },
     "map": {
       "title": "आम्हाला शोधा",
-      "subtitle": "जनोरी गावातील आमच्या कार्यालयाला भेट द्या",
+      "subtitle": "जानोरी गावातील आमच्या कार्यालयाला भेट द्या",
       "directionsTitle": "आम्हाला कसे गाठाल",
       "byBus": "बसने",
-      "byBusDesc": "जनोरी बस स्थानकापर्यंत राज्य परिवहन बस घ्या. पंचायत कार्यालय बस स्थानकापासून ५०० मीटर अंतरावर आहे.",
+      "byBusDesc": "जानोरी बस स्थानकापर्यंत राज्य परिवहन बस घ्या. पंचायत कार्यालय बस स्थानकापासून ५०० मीटर अंतरावर आहे.",
       "byCar": "कारने",
-      "byCarDesc": "पुणे-सोलापूर महामार्गावरून जनोरी जंक्शनवर वळा. गाव केंद्रापर्यंत मार्गदर्शक फलकांचे अनुसरण करा.",
+      "byCarDesc": "पुणे-सोलापूर महामार्गावरून जानोरी जंक्शनवर वळा. गाव केंद्रापर्यंत मार्गदर्शक फलकांचे अनुसरण करा.",
       "byTrain": "रेल्वेने",
-      "byTrainDesc": "जवळचे रेल्वे स्थानक हडपसर (१५ कि.मी.) आहे. जनोरीपर्यंत रिक्षा किंवा बस घ्या."
+      "byTrainDesc": "जवळचे रेल्वे स्थानक हडपसर (१५ कि.मी.) आहे. जानोरीपर्यंत रिक्षा किंवा बस घ्या."
     },
     "formSuccess": "फॉर्म यशस्वीरित्या सबमिट झाला!",
     "importantNotice": "महत्वाची सूचना: कृपया २५ जून रोजी संध्याकाळी ५:०० वाजता ग्रामसभा बैठकीस गाव सभागृहात उपस्थित राहा. आपल्या सहभागामुळे गावाचा विकास साधता येईल!"
