--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -12,7 +12,34 @@
     "contact": "संपर्क",
     "logout": "लॉगआउट",
     "adminLogin": "प्रशासन लॉगिन",
-    "brandTitle": "अपली जानोरी"
+    "brandTitle": "जानोरी"
+  },
+  "contactInfo": {
+    "title": "संपर्क करें",
+    "subtitle": "जानोरी ग्राम पंचायत से संपर्क करें",
+    "getInTouch": {
+      "title": "संपर्क में रहें",
+      "description": "हम आपकी किसी भी जिज्ञासा या चिंता में सहायता के लिए यहां हैं। निम्नलिखित माध्यमों से हमसे संपर्क करें:"
+    },
+    "directions": {
+      "title": "हम तक कैसे पहुंचें",
+      "subtitle": "जानोरी ग्राम पंचायत तक पहुंचने के मार्ग",
+      "byRoad": "सड़क मार्ग से",
+      "fromShegaon": "शेगांव शहर से १२ किलोमीटर - एसएच-२४ से जानोरी की ओर जाएं",
+      "fromBuldhana": "बुलढाणा से ४५ किलोमीटर - शेगांव-बुलढाणा मार्ग से",
+      "fromAkola": "अकोला से ६५ किलोमीटर - एनएच-६ और एसएच-२४ के मार्ग से",
+      "byRail": "रेल मार्ग से",
+      "nearestStation": "निकटतम रेलवे स्टेशन: शेगांव (१२ किलोमीटर)",
+      "fromStation": "स्टेशन से ऑटो-रिक्शा और टैक्सी की सुविधा उपलब्ध",
+      "byBus": "बस मार्ग से",
+      "stBus": "शेगांव एसटी बस स्टैंड से नियमित एसटी बस सेवा",
+      "privateBus": "प्रमुख शहरों से निजी बस सेवा उपलब्ध",
+      "busFrequency": "शेगांव से हर ३० मिनट में बस सेवा",
+      "landmarks": "प्रमुख स्थल",
+      "landmark1": "जानोरी मुख्य बस स्टॉप के पास",
+      "landmark2": "ग्राम पंचायत कार्यालय, मुख्य मार्ग",
+      "landmark3": "ग्राम बाज़ार के सामने"
+    }
   },
   "home": {
     "slide1": {
@@ -426,6 +453,20 @@
       "byTrain": "ट्रेन द्वारा",
       "byTrainDesc": "निकटतम रेलवे स्टेशन हडपसर (15 किमी) है। जनोरी पहुँचने के लिए ऑटो-रिक्शा या बस लें।"
     },
-    "formSuccess": "फॉर्म सफलतापूर्वक सबमिट हो गया!"
+    "directions": {
+      "title": "हम तक कैसे पहुंचें",
+      "subtitle": "जानोरी ग्राम पंचायत तक पहुंचने के मार्ग",
+      "byRoad": "सड़क मार्ग से",
+      "fromShegaon": "शेगांव शहर से 12 किमी - एसएच-24 से जानोरी की ओर जाएं",
+      "fromBuldhana": "बुलढाणा से 45 किमी - शेगांव-बुलढाणा मार्ग से",
+      "fromAkola": "अकोला से 65 किमी - एनएच-6 और एसएच-24 के मार्ग से",
+      "byRail": "रेल मार्ग से",
+      "nearestStation": "निकटतम रेलवे स्टेशन: शेगांव (12 किमी)",
+      "fromStation": "स्टेशन से ऑटो और टैक्सी उपलब्ध",
+      "byBus": "बस से",
+      "stBus": "शेगांव बस स्टैंड से नियमित एसटी बस सेवा",
+      "privateBus": "प्रमुख शहरों से निजी बस सेवा उपलब्ध",
+      "busFrequency": "शेगांव से हर 30 मिनट में बस"
+    }
   }
 }
