--- a/src/i18n/locales/mr.json
+++ b/src/i18n/locales/mr.json
@@ -1,18 +1,21 @@
 {
   "welcome": {
-    "title": "जानोरीमध्ये आपले स्वागत आहे",
+    "title": "आपली जानोरी",
     "subtitle": "शाश्वत विकास आणि समृद्धीसाठी वचनबद्ध एक आदर्श गाव"
   },
   "nav": {
-    "home": "मुख्यपृष्ठ",
+        "home": "मुख्यपृष्ठ",
     "about": "आमच्याबद्दल",
     "services": "सेवा",
     "events": "कार्यक्रम",
     "gallery": "गॅलरी",
     "contact": "संपर्क",
-    "logout": "लॉगआउट",
+        "logout": "लॉगआउट",
     "adminLogin": "प्रशासन लॉगिन",
-    "brandTitle": "अपली जानोरी"
+    "brandTitle": "आपली जानोरी"
+  },
+  "Contact": {
+    "brandTitle": "आपली जानोरी"
   },
   "home": {
     "slide1": {
@@ -28,7 +31,7 @@
       "subtitle": "प्रगतीकडे एक पाऊल"
     },
     "welcomeTitle": "Welcome to ",
-    "villageName": "Janori",
+    "villageName": "आपली जानोरी",
     "gramPanchayat": " Gram Panchayat",
     "welcomeParagraph1": "जानोरी हे महाराष्ट्राच्या ग्रामीण भागात वसलेले एक जिवंत गाव आहे, जिथे परंपरा प्रगतीशी मिळते. आमची ग्रामपंचायत गावाच्या शाश्वत विकासासाठी आणि रहिवाशांच्या कल्याणासाठी वचनबद्ध आहे.",
     "welcomeParagraph2": "आमच्या सरपंच आणि समर्पित पंचायत सदस्यांच्या दूरदर्शी नेतृत्वाखाली, आम्ही जानोरीला आधुनिक सुविधांसह एक आदर्श गाव बनवण्यासाठी अथक प्रयत्न करत आहोत, तसेच आमचा समृद्ध सांस्कृतिक वारसा जपत आहोत.",
@@ -378,7 +381,7 @@
       "description": "आम्ही तुमच्या कोणत्याही चौकशी किंवा समस्यांमध्ये मदत करण्यासाठी येथे आहोत. खालीलपैकी कोणत्याही माध्यमातून आमच्याशी संपर्क साधा:"
     },
     "form": {
-      "title": "आम्हाला संदेश पाठवा",
+      "title": "आमला संदेश पाठवा",
       "name": "पूर्ण नाव",
       "email": "ईमेल पत्ता",
       "phone": "फोन नंबर",
